--- a/html/index1.html
+++ b/html/index1.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="index1.html">index1.html</a>
+    <!-- <a href="index1.html">index1.html</a>
     <br>
     <a href="img-link.html">img-link.html</a>
     <br>
@@ -16,7 +16,7 @@
     <br>
     <a href="table.html">table.html</a>
     <br>
-    <a href="list.html">list.html</a>
+    <a href="list.html">list.html</a> -->
 
 
 
@@ -32,14 +32,21 @@
     <p>абзац</p>
 
 
-    <button>кнопка</button> <br> <hr>
-    <button>кнопка</button> <br> <hr>
-    <button>кнопка</button> <br> <hr>
-    <button>кнопка</button> <br> <hr>
+    <button>кнопка</button> <br>
+    <hr>
+    <button>кнопка</button> <br>
+    <hr>
+    <button>кнопка</button> <br>
+    <hr>
+    <button>кнопка</button> <br>
+    <hr>
     <button>
         <h6>большая кнопка</h6>
     </button>
-    
+    <button>
+        <p>большая кнопка</p>
+    </button>
+
     <p><b>Lorem ipsum dolor sit amet.</b></p>
     <p><strong>Lorem ipsum dolor sit amet.</strong></p>
     <p><em>Lorem ipsum dolor sit amet.</em></p>
@@ -60,7 +67,10 @@
     </pre>
 
     <p>
-        Lorem ipsum dolor sita met.
+        Lorem 
+        ipsum 
+        dolor 
+        met.
     </p>
 
     <!-- <a href="img-link.html" target="_self">
